--- a/cyber/cyberapp/templates/home.html
+++ b/cyber/cyberapp/templates/home.html
@@ -372,7 +372,7 @@
               <th>Phone Number</th>
               <th>Session Start</th>
               <th>Active Session</th>
-              <th>Total Hours</th>
+              <th>Time spent</th>
               <th>Actions</th>
             </tr>
           </thead>
@@ -398,12 +398,14 @@
                 {% endif %}
               </td>
               <td>
-                {% if student.active_session %}
-                {{ student.active_session.duration_hours }} <!-- correct braces and attribute -->
-                {% else %}
-                N/A
-                {% endif %}
-              </td>
+  {% if student.active_session %}
+    {{ student.active_session.duration_hours }}
+  {% elif student.last_session %}
+    {{ student.last_session.duration_hours }}
+  {% else %}
+    N/A
+  {% endif %}
+</td>
               <td>
                 {% if student.active_session %}
                 <a href="{% url 'end_session' student.idnumber %}" class="btn btn-sm btn-danger">End Session</a>
